# open-chat-bots

./: .gitignore  GETSTARTED.md  OVERVIEW.md  README.md
.docs/: integration-guide.md
.github/workflows/: backend.yaml  pr_created.yaml
motoko/: mops.toml
motoko/examples/: deploy.sh  deploy_prod.sh  dfx.json  mops.toml
motoko/src/: apiKeyRegistry.mo  client.mo  commandAdaptor.mo  commandHandler.mo  installationEvents.mo  installationRegistry.mo  lib.mo
rs/: .gitignore  Cargo.toml  README.md  dfx.json  rust-toolchain.toml
rs/canister/: README.md
rs/canister/examples/adventure/: Cargo.toml
rs/canister/examples/adventure/src/: games.rs  lib.rs  state.rs
rs/canister/examples/adventure/src/games/: buccaneers_cache.z3  duckme.z3  library_of_horror.z3
rs/canister/examples/adventure/src/model/: engine.rs
rs/canister/examples/adventure/src/router/: commands.rs  definition.rs  events.rs  metrics.rs
rs/canister/examples/adventure/src/router/commands/: current.rs  input.rs  start.rs
rs/canister/sdk/: Cargo.toml
rs/canister/sdk/src/: canister_runtime.rs  env.rs  event_parser.rs  http_command_handler.rs  http_router.rs  installation_events.rs  lib.rs
rs/examples/relay/: Cargo.toml
rs/examples/relay/src/: http_request.rs  lib.rs  state.rs
rs/examples/relay/src/lifecycle/: init.rs  post_upgrade.rs
rs/offchain/: README.md
rs/offchain/examples/llama/: .gitignore  Cargo.toml
rs/offchain/examples/llama/src/: config.rs  llm_canister_agent.rs  main.rs
rs/offchain/examples/llama/src/commands/: prompt.rs
rs/offchain/sdk/: Cargo.toml
rs/offchain/sdk/src/: agent_builder.rs  agent_runtime.rs
rs/offchain/sdk/src/middleware/: tower.rs
rs/scripts/: deploy_admin_bot.sh  deploy_adventure_bot.sh  deploy_echo_bot.sh  deploy_moderator_bot.sh  deploy_reaction_channeler_bot.sh  notes.md  (+4 more)
rs/sdk/: Cargo.toml  README.md
rs/sdk/src/: api_key.rs  api_key_registry.rs  installation_registry.rs  installation_secrets.rs  lib.rs  openchat_client.rs  runtime.rs
rs/sdk/src/actions/: create_channel.rs  delete_channel.rs  send_message.rs
rs/sdk/src/api/: api_key_registry.rs  command.rs  definition.rs  event_notification.rs  get_access_token.rs  mod.rs
rs/sdk/src/api/command/: command_handler.rs
rs/sdk/src/api_gateway/: mod.rs
rs/sdk/src/api_gateway/actions/: create_channel.rs  delete_channel.rs  send_message.rs
rs/sdk/src/oc_api/: actions.rs  client.rs  client_factory.rs  get_access_token.rs  runtime.rs
rs/sdk/src/oc_api/actions/: add_reaction.rs  change_role.rs  chat_details.rs  chat_events.rs  chat_summary.rs  community_events.rs  community_summary.rs  create_channel.rs  delete_channel.rs  delete_messages.rs  installation_events.rs  invite_users.rs  members.rs  remove_user.rs  send_message.rs  subscribe_to_events.rs
rs/sdk/src/oc_api/client/: add_reaction.rs  change_role.rs  chat_details.rs  chat_events.rs  chat_summary.rs  community_events.rs  community_summary.rs  create_channel.rs  delete_channel.rs  delete_messages.rs  installation_events.rs  invite_users.rs  members.rs  remove_user.rs  send_message.rs  subscribe_to_chat_events.rs  subscribe_to_events.rs  unsubscribe_from_chat_events.rs  unsubscribe_from_events.rs
rs/sdk/src/oc_api/client_factory/: command.rs
rs/sdk/src/oc_api/client_factory/command/: send_message.rs
rs/sdk/src/openchat_client_factory/api_key/: create_channel.rs  delete_channel.rs  send_message.rs
rs/sdk/src/openchat_client_factory/command/: send_message.rs
rs/sdk/src/types/: action.rs  action_context.rs  api_key.rs  basic.rs  bot_command_context.rs  bot_context.rs  chat.rs  chat_context.rs  community_or_group_context.rs  error_codes.rs  events.rs  jwt.rs  message_content.rs  message_id.rs  mod.rs  permissions.rs
rs/sdk/src/utils/: api_key.rs  base64.rs  default.rs  ecdsa.rs  json.rs  jwt.rs  mod.rs  msgpack.rs  serde.rs  serializers.rs
schema/: README.md  bot_schema.json
scripts/: configure_llama_bot.sh  deploy_dice_bot.sh  deploy_greet_bot.sh  deploy_llama_bot.sh  deploy_reminder_bot.sh
ts/: README.md
(+373 files in other folders)
