[package]
name = "oc_bots_sdk_offchain"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
http.workspace = true
ic-agent = { workspace = true }
oc_bots_sdk = { path = "../../sdk" }
rmp-serde = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tower = { version = "0.5.2", optional = true }

[features]
tower = ["dep:tower"]
