[package]
name = "adventure_bot"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
async-trait = { workspace = true }
oc_bots_sdk = { path = "../../../sdk" }
oc_bots_sdk_canister = { path = "../../sdk" }
candid = { workspace = true }
getrandom = { workspace = true }
http = { workspace = true }
ic-cdk = { workspace = true }
ic-http-certification = { workspace = true }
ic_principal = { workspace = true }
ic-stable-structures = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
rmp-serde = { workspace = true }
rustyknife-z = { git = "https://github.com/megrogan/rustyknife", rev = "0c3b85b2df537574a2721b485e8be6c4c269c061" }
serde = { workspace = true }
serde_json = { workspace = true }
